# occupancy_level

./: README.md  pyproject.toml
src/: computer_state.db  database.py  main.py  state.py  timer.py
