[tool.poetry]
name = "occupancy-level"
version = "0.1.0"
description = ""
authors = ["Ayrat Fatykhov <airat_91_91@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tk = "^0.1.0"
psutil = "^6.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
